--- a/index.html
+++ b/index.html
@@ -1,32 +1,46 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en-us">
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="style.css">
-    <script src="main.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>About | Your Name</title>
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
-        <header>Mike Ommen Portfolio</header>
-        <div class="clearfix"></div>
 
-        <div class="container">
-            <h2>About Me</h2>
-        </div>
+<div class="wrapper">
 
+  <header id="masthead">
+    <div class="container">
+      <a href="index.html" id="logo">Your Name</a>
+      <nav>
         <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
+          <li><a href="index.html">About</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
+      </nav>
+    </div>
+  </header>
 
+  <main class="container">
+    <section class="main-section">
+      <h1>About Me</h1>
 
-        
+      <img src="assets/images/cat.jpg" class="auth-image" alt="placeholder">
 
+      <p>Mike Ommen is the name and web development is the game. I'm currently undertaking a fullstack coding bootcamp at Northwestern University, and working fulltime at Uber, as a client success specialist.</p>
+<p>Outside of work and class, I'll most likely be watching the STL Cardinals, Bears, maybe the Bulls, the Hawks and most definitely, the UFC. </p>
+    </section>
 
+  </main>
+  <div class="push"></div>
+</div>
 
-    
+  <footer>
+    <div class="container">
+      &copy; Copyright
+    </div>
+  </footer>
 </body>
 </html>
