Final changes and included headshot

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <header id="masthead">
     <div class="container">
-      <a href="index.html" id="logo">Your Name</a>
+      <a href="index.html" id="logo">Mike Ommen</a>
       <nav>
         <ul>
           <li><a href="index.html">About</a></li>
@@ -27,7 +27,7 @@
     <section class="main-section">
       <h1>About Me</h1>
 
-      <img src="assets/images/cat.jpg" class="auth-image" alt="placeholder">
+      <img src="assets/images/Headshot.jpg" class="auth-image" alt="placeholder">
 
       <p>Mike Ommen is the name and web development is the game. I'm currently undertaking a fullstack coding bootcamp at Northwestern University, and working fulltime at Uber, as a client success specialist.</p>
 <p>Outside of work and class, I'll most likely be watching the STL Cardinals, Bears, maybe the Bulls, the Hawks and most definitely, the UFC. </p>
