added link to project 2

--- a/portfolio.html
+++ b/portfolio.html
@@ -57,6 +57,25 @@
       </a>
         <h3>Train Scheduler</h3>
       </div>
+            <div class="work">
+        <a target="_blank" href="https://briankohnen.github.io/proj-test-pages/">
+        <img src="assets/images/technics-q-c-640-480-9.jpg"  alt="Project 1">
+      </a>
+        <h3>F.O.M.O. Events</h3>
+      </div>
+      <div class="work">
+          <a target="_blank" href="https://switch-board.herokuapp.com/">
+          <img src="assets/images/technics-q-c-640-480-9.jpg"  alt="Project 2">
+        </a>
+          <h3>SwitchBoard</h3>
+        </div>
+
+
+
+
+
+
+
 
     </section>
   </main>
